; ModuleID = '/home/carl/AnghaBench/hiredis/extr_async.c_redisAsyncConnectWithOptions.c'
source_filename = "/home/carl/AnghaBench/hiredis/extr_async.c_redisAsyncConnectWithOptions.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@REDIS_OPT_NONBLOCK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @redisAsyncConnectWithOptions(%struct.TYPE_4__* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca %struct.TYPE_4__, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %8 = bitcast %struct.TYPE_4__* %4 to i8*
  %9 = bitcast %struct.TYPE_4__* %7 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %8, i8* align 4 %9, i64 4, i1 false)
  %10 = load i32, i32* @REDIS_OPT_NONBLOCK, align 4
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = or i32 %12, %10
  store i32 %13, i32* %11, align 4
  %14 = call i32* @redisConnectWithOptions(%struct.TYPE_4__* %4)
  store i32* %14, i32** %5, align 8
  %15 = load i32*, i32** %5, align 8
  %16 = icmp eq i32* %15, null
  br i1 %16, label %17, label %18

17:                                               ; preds = %1
  store i32* null, i32** %2, align 8
  br label %30

18:                                               ; preds = %1
  %19 = load i32*, i32** %5, align 8
  %20 = call i32* @redisAsyncInitialize(i32* %19)
  store i32* %20, i32** %6, align 8
  %21 = load i32*, i32** %6, align 8
  %22 = icmp eq i32* %21, null
  br i1 %22, label %23, label %26

23:                                               ; preds = %18
  %24 = load i32*, i32** %5, align 8
  %25 = call i32 @redisFree(i32* %24)
  store i32* null, i32** %2, align 8
  br label %30

26:                                               ; preds = %18
  %27 = load i32*, i32** %6, align 8
  %28 = call i32 @__redisAsyncCopyError(i32* %27)
  %29 = load i32*, i32** %6, align 8
  store i32* %29, i32** %2, align 8
  br label %30

30:                                               ; preds = %26, %23, %17
  %31 = load i32*, i32** %2, align 8
  ret i32* %31
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32* @redisConnectWithOptions(%struct.TYPE_4__*) #2

declare dso_local i32* @redisAsyncInitialize(i32*) #2

declare dso_local i32 @redisFree(i32*) #2

declare dso_local i32 @__redisAsyncCopyError(i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
